# gamelibs-sdl

./: Makefile  meson.build  meson_options.txt
VisualC/SDL/: SDL.vcxproj  SDL.vcxproj.filters
VisualC/SDLmain/: SDLmain.vcxproj
include/: SDL_assert.h  SDL_config.h  SDL_config_linux.h  SDL_config_macosx.h  SDL_config_windows.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_events.h  SDL_hints.h  SDL_main.h  SDL_opengl.h  SDL_opengles2.h  SDL_stdinc.h  SDL_video.h  begin_code.h  close_code.h  meson.build
include/SDL3/: SDL_begin_code.h  SDL_close_code.h  SDL_egl.h  SDL_endian.h  SDL_hints.h  SDL_opengles2.h  SDL_video.h  begin_code.h  close_code.h
include/build_config/: SDL_build_config.h  SDL_build_config_linux.h  SDL_build_config_macos.h  SDL_build_config_windows.h  meson.build
meson_utilities/: meson.build
msvc/: .gitignore  SDL3.vcxproj  SDL3.vcxproj.filters  SDL_revision.h.in  gen_revision.py
msvc/SDL/: SDL.vcxproj  SDL.vcxproj.filters
msvc/SDLmain/: SDLmain.vcxproj
src/: SDL.c  SDL_assert.c  SDL_dataqueue.c  SDL_error.c  SDL_error_c.h  SDL_hints.c  SDL_hints_c.h  SDL_internal.h  SDL_list.c  SDL_log.c
src/atomic/: SDL_atomic.c  SDL_spinlock.c
src/audio/: SDL_audio.c  SDL_audio_c.h  SDL_audiocvt.c  SDL_audiodev.c  SDL_audiodev_c.h  SDL_audiotypecvt.c  SDL_mixer.c  SDL_sysaudio.h  SDL_wave.c  SDL_wave.h
src/audio/aaudio/: SDL_aaudio.c  SDL_aaudio.h
src/audio/alsa/: SDL_alsa_audio.c  SDL_alsa_audio.h
src/audio/android/: SDL_androidaudio.c  SDL_androidaudio.h
src/audio/arts/: SDL_artsaudio.c  SDL_artsaudio.h
src/audio/coreaudio/: SDL_coreaudio.h  SDL_coreaudio.m
src/audio/directsound/: SDL_directsound.c  SDL_directsound.h
src/audio/disk/: SDL_diskaudio.c  SDL_diskaudio.h
src/audio/dsp/: SDL_dspaudio.c  SDL_dspaudio.h
src/audio/dummy/: SDL_dummyaudio.c  SDL_dummyaudio.h
src/audio/emscripten/: SDL_emscriptenaudio.c  SDL_emscriptenaudio.h
src/audio/esd/: SDL_esdaudio.c  SDL_esdaudio.h
src/audio/fusionsound/: SDL_fsaudio.c  SDL_fsaudio.h
src/audio/haiku/: SDL_haikuaudio.cc  SDL_haikuaudio.h
src/audio/jack/: SDL_jackaudio.c
src/audio/n3ds/: SDL_n3dsaudio.c
src/audio/nacl/: SDL_naclaudio.c  SDL_naclaudio.h
src/audio/nas/: SDL_nasaudio.c  SDL_nasaudio.h
src/audio/netbsd/: SDL_netbsdaudio.c  SDL_netbsdaudio.h
src/audio/openslES/: SDL_openslES.c  SDL_openslES.h
src/audio/os2/: SDL_os2audio.c  SDL_os2audio.h
src/audio/paudio/: SDL_paudio.c  SDL_paudio.h
src/audio/pipewire/: SDL_pipewire.c  SDL_pipewire.h
src/audio/ps2/: SDL_ps2audio.c  SDL_ps2audio.h
src/audio/psp/: SDL_pspaudio.c
src/audio/pulseaudio/: SDL_pulseaudio.c  SDL_pulseaudio.h
src/audio/qsa/: SDL_qsa_audio.c  SDL_qsa_audio.h
src/audio/sndio/: SDL_sndioaudio.c  SDL_sndioaudio.h
src/audio/sun/: SDL_sunaudio.c  SDL_sunaudio.h
src/audio/vita/: SDL_vitaaudio.c
src/audio/wasapi/: SDL_wasapi.c  SDL_wasapi.h  SDL_wasapi_win32.c  SDL_wasapi_winrt.cpp
src/audio/winmm/: SDL_winmm.c  SDL_winmm.h
src/core/android/: SDL_android.c  SDL_android.h
src/core/freebsd/: SDL_evdev_kbd_freebsd.c
src/core/gdk/: SDL_gdk.cpp  SDL_gdk.h
src/core/linux/: SDL_dbus.c  SDL_dbus.h  SDL_evdev.c  SDL_evdev.h  SDL_evdev_capabilities.c  SDL_evdev_capabilities.h  SDL_evdev_kbd.c  SDL_fcitx.c  SDL_fcitx.h  SDL_ibus.c  SDL_ibus.h  SDL_ime.c  SDL_ime.h  SDL_sandbox.c  SDL_threadprio.c  SDL_udev.c  SDL_udev.h
src/core/openbsd/: SDL_wscons_kbd.c  SDL_wscons_mouse.c
src/core/os2/: SDL_os2.c
src/core/unix/: SDL_poll.c  SDL_poll.h
src/core/windows/: SDL_directx.h  SDL_hid.c  SDL_hid.h  SDL_immdevice.c  SDL_windows.c  SDL_xinput.c  SDL_xinput.h
src/core/winrt/: SDL_winrtapp_common.cpp  SDL_winrtapp_direct3d.cpp  SDL_winrtapp_xaml.cpp
src/cpuinfo/: SDL_cpuinfo.c
src/dynapi/: SDL_dynapi.c  SDL_dynapi.h
src/events/: SDL_clipboardevents.c  SDL_clipboardevents_c.h  SDL_displayevents.c  SDL_displayevents_c.h  SDL_dropevents.c  SDL_dropevents_c.h  SDL_events.c  SDL_events_c.h  SDL_gesture.c  SDL_gesture_c.h  SDL_keyboard.c  SDL_keyboard_c.h  SDL_keysym_to_scancode.c  SDL_mouse.c  SDL_mouse_c.h  SDL_quit.c  SDL_scancode_tables.c  SDL_scancode_tables_c.h  SDL_sysevents.h  SDL_touch.c  SDL_touch_c.h  SDL_windowevents.c  SDL_windowevents_c.h
src/file/: SDL_rwops.c
src/file/cocoa/: SDL_rwopsbundlesupport.m
src/file/n3ds/: SDL_rwopsromfs.h
src/filesystem/android/: SDL_sysfilesystem.c
src/filesystem/cocoa/: SDL_sysfilesystem.m
src/filesystem/dummy/: SDL_sysfilesystem.c
src/filesystem/emscripten/: SDL_sysfilesystem.c
src/filesystem/gdk/: SDL_sysfilesystem.cpp
src/filesystem/haiku/: SDL_sysfilesystem.cc
src/filesystem/n3ds/: SDL_sysfilesystem.c
src/filesystem/nacl/: SDL_sysfilesystem.c
src/haptic/: SDL_haptic.c  SDL_syshaptic.h
src/hidapi/: SDL_hidapi.c  SDL_hidapi.h  SDL_hidapi_c.h
src/hidapi/ios/: hid.m
src/joystick/: SDL_gamecontroller.c  SDL_gamecontrollerdb.h  SDL_gamepad_db.h  SDL_joystick.c  SDL_joystick_c.h  SDL_steam_virtual_gamepad.c  SDL_steam_virtual_gamepad.h  SDL_sysjoystick.h  controller_type.c
src/libm/: math_libm.h
src/locale/: SDL_locale.c
src/misc/: SDL_sysurl.h  SDL_url.c
src/power/: SDL_power.c  SDL_syspower.h
src/render/: SDL_d3dmath.c  SDL_d3dmath.h  SDL_render.c  SDL_sysrender.h  SDL_yuv_sw.c  SDL_yuv_sw_c.h
src/sensor/: SDL_sensor.c
src/stdlib/: SDL_crc16.c  SDL_crc32.c  SDL_getenv.c  SDL_iconv.c  SDL_malloc.c  SDL_memcpy.c  SDL_memset.c  SDL_mslibc.c  SDL_qsort.c  SDL_stdlib.c  SDL_string.c  SDL_strtokr.c  SDL_vacopy.h
src/thread/: SDL_systhread.h  SDL_thread.c  SDL_thread_c.h
src/timer/: SDL_timer.c  SDL_timer_c.h
src/video/: SDL_RLEaccel.c  SDL_RLEaccel_c.h  SDL_blit.c  SDL_blit.h  SDL_blit_0.c  SDL_blit_1.c  SDL_blit_A.c  SDL_blit_N.c  SDL_blit_auto.c  SDL_blit_auto.h  SDL_blit_copy.c  SDL_blit_slow.c  SDL_blit_slow.h  SDL_bmp.c  SDL_clipboard.c  SDL_egl.c  SDL_egl_c.h  SDL_fillrect.c  SDL_pixels.c  SDL_pixels_c.h  SDL_rect.c  SDL_rect_c.h  SDL_shape.c  SDL_shape_internals.h  SDL_stretch.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c  SDL_vulkan_internal.h  SDL_vulkan_utils.c  SDL_yuv.c  SDL_yuv_c.h  sdlgenblit.pl
(+539 files in other folders)
